$Id$

0.7.1beta
	- sauron.cgi script split into several modules
	  that are loaded only when needed
	- added support for Apache (external) authentication
	
0.7.0
	- added new utility import-nets for importing/updating
	  nets (and VLANs) from a CSV file
	- added support for custom DHCP classes
	- removed hosts	show up as "pending" changes to zone
	  (before only new hosts or modified hosts showed up)
	- added new user/group privileges that can be used to 
	  control what type records user can add
	- improved code for detecting wheter zone serial should
	  be increased or not (detects removed hosts and work
	  with reverse zones)
	- added initial (Cisco) VMPS support
	   - export-vmps utility for generating VMPS configuration files
	   - VMPS domains can now be managed via Web interface
	   - groups may now be associated with a VMPS domain
	- changed DBI (DBD::Pg) as default database access method
	  (use --with-Pg option when running configure to use Pg)
	- user can now be member of more than one user group
	- database format changes (1.1):
	    - lastlog: changed host from CHAR(40) --> TEXT
	    - hosts: added new columns: vmps, dhcp_last
	    - users: removed column 'gid' (group memberships are treated
	             now as with any other priviliges)
	    - utmp: removed obsolete column 'gid'
	    - new table 'vmps'
	    - vlans: new column 'vlanno'
	    - zones: new column 'rdate'
	
0.6.2
	- fixed dates displayed (month was off by one) by last command
	  and lastlog display in web-interface
	- fixed bug when copying reverse zones that left wrong
	  value in reversenet field
	- new user privileges:
	  - templatemask & groupmask for granting userss access to 
	    greate & modify templates/groups with names matching to a 
	    regular expression
	  - deletemask for granting users privilige to only remove hosts 
	    that match a regular expression
	  - reqhostfield for fine tuning what fields in host add/edit
	    forms are mandatory and which are optional