@@ -1,6 +1,8 @@
 $Id$
 
 0.7.1beta
+	- support for "DHCP only" entries without IP
+	  (just MAC address)
 	- sauron.cgi script split into several modules
 	  that are loaded only when needed
 	- added support for Apache (external) authentication
